--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -67,3 +67,10 @@ test:
         # low amounts for fast failures.
         max_retries: 1
         retry_interval: 0
+
+production:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
+      options:
+        consistency: :strong
